--- a/app/src/main/res/layout/manual.xml
+++ b/app/src/main/res/layout/manual.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -113,6 +114,25 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/RIGHT"
         app:layout_constraintStart_toEndOf="@+id/LEFT" />
+
+    <edu.wm.cs.cs301.gui.MazePanel
+
+        android:id="@+id/custView"
+
+        android:layout_width="250dp"
+
+        android:layout_height="250dp"
+
+        android:layout_margin="5dp"
+
+        app:layout_constraintBottom_toTopOf="@+id/FORWARD"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar"
+        custom:circleColor="#ff0099"
+        custom:circleLabel="Hello"
+        custom:labelColor="#ffff66" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
