Converting maze generation from eclipse to android studio

--- a/app/src/main/res/layout/manual.xml
+++ b/app/src/main/res/layout/manual.xml
@@ -116,20 +116,14 @@
         app:layout_constraintStart_toEndOf="@+id/LEFT" />
 
     <edu.wm.cs.cs301.gui.MazePanel
-
-        android:id="@+id/custView"
-
-        android:layout_width="250dp"
-
-        android:layout_height="250dp"
-
-        android:layout_margin="5dp"
-
-        app:layout_constraintBottom_toTopOf="@+id/FORWARD"
-
+        android:id="@+id/mazePanel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
