--- a/app/src/main/res/layout/manual.xml
+++ b/app/src/main/res/layout/manual.xml
@@ -117,8 +117,9 @@
 
     <edu.wm.cs.cs301.gui.MazePanel
         android:id="@+id/mazePanel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginBottom="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
