--- a/app/src/main/res/layout/manual.xml
+++ b/app/src/main/res/layout/manual.xml
@@ -120,6 +120,7 @@
         android:layout_width="400dp"
         android:layout_height="400dp"
         android:layout_marginBottom="80dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
