--- a/app/src/main/res/layout/animation.xml
+++ b/app/src/main/res/layout/animation.xml
@@ -6,20 +6,79 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ToggleButton
+        android:id="@+id/animwallshow"
+        android:layout_width="100dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="155dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="156dp"
+        android:text="ToggleButton"
+        android:textOff="Show\nWalls"
+        android:textOn="Hide\nWalls"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ToggleButton
+        android:id="@+id/animmapshow"
+        android:layout_width="100dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="25dp"
+        android:text="ToggleButton"
+        android:textOff="Show\nMap"
+        android:textOn="Hide\nMap"
+        app:layout_constraintEnd_toStartOf="@+id/animwallshow"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ToggleButton
+        android:id="@+id/animsolutionshow"
+        android:layout_width="100dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="12dp"
+        android:checked="false"
+        android:text="ToggleButton"
+        android:textOff="Show\nSolution"
+        android:textOn="Hide\nSolution"
+        app:layout_constraintStart_toEndOf="@+id/animwallshow"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <SeekBar
+        android:id="@+id/animseekBar"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="31dp"
+        android:max="100"
+        android:progress="50"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/animwallshow" />
+
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/animscale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ROBOT MODE"
-        tools:layout_editor_absoluteX="174dp"
-        tools:layout_editor_absoluteY="276dp" />
+        android:layout_marginTop="10dp"
+        android:fontFamily="sans-serif-black"
+        android:text="MAP\nSCALE"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/animseekBar"
+        app:layout_constraintTop_toBottomOf="@+id/animmapshow" />
 
     <edu.wm.cs.cs301.gui.MazePanel
-        android:id="@+id/mazePanel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/animmazePanel"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:layout_marginBottom="80dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
