--- a/app/src/main/res/layout/animation.xml
+++ b/app/src/main/res/layout/animation.xml
@@ -81,4 +81,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/TOGGLE"
+        android:layout_width="70dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="115dp"
+        android:layout_marginBottom="40dp"
+        android:text="⏸"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
